# BillBuddies

./: README.md  build
app/tauri-plugin-mobile-sharetarget/: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
app/tauri-plugin-mobile-sharetarget/android/: build.gradle.kts  local.properties
app/tauri-plugin-mobile-sharetarget/android/src/androidTest/java/: ExampleInstrumentedTest.kt
app/tauri-plugin-mobile-sharetarget/android/src/main/java/: Sharetarget.kt  SharetargetPlugin.kt
app/tauri-plugin-mobile-sharetarget/android/src/test/java/: ExampleUnitTest.kt
app/tauri-plugin-mobile-sharetarget/examples/tauri-app/: package.json  pnpm-lock.yaml
app/tauri-plugin-mobile-sharetarget/examples/tauri-app/src/: App.svelte
app/tauri-plugin-mobile-sharetarget/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri-plugin-mobile-sharetarget/examples/tauri-app/src-tauri/src/: lib.rs
app/tauri-plugin-mobile-sharetarget/guest-js/: index.ts
app/tauri-plugin-mobile-sharetarget/ios/: Package.swift  README.md
app/tauri-plugin-mobile-sharetarget/ios/Sources/: ExamplePlugin.swift
app/tauri-plugin-mobile-sharetarget/permissions/: default.toml
app/tauri-plugin-mobile-sharetarget/permissions/autogenerated/: reference.md
app/tauri-plugin-mobile-sharetarget/permissions/autogenerated/commands/: pop_intent_queue.toml  pop_intent_queue_and_extract_text.toml
app/tauri-plugin-mobile-sharetarget/permissions/schemas/: schema.json
app/tauri-plugin-mobile-sharetarget/src/: commands.rs  desktop.rs  error.rs  intents.rs  lib.rs  mobile.rs
(+116 files in other folders)
