[package]
name = "tauri-plugin-mobile-sharetarget"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mobile-sharetarget"

[dependencies]
tauri = { version = "2.9.3" }
serde = "1.0"
thiserror = "2"
crossbeam-queue = "0.3.12"
serde_json = "1.0.145"
anyhow = "1.0.100"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
