[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", default-features = false , features = [] }

[dependencies]
serde_json = "1.0.145"
tauri = { version = "2.9.3", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-mobile-sharetarget = { path = "../../../" }
